# tr2ynab

./: .flake8  CHANGELOG.md  LICENSE  README.md  cli.py  example.cfg  pyproject.toml  requirements.txt
tests/: test_tr2ynab.py
tr2ynab/: __init__.py  __main__.py  _version.py  tr2ynab.py
